--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,12 @@
                 android:orientation="vertical"
                 android:layout_weight="1">
 
+                <ListView
+                    android:id="@+id/listViewClientes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"/>
+
             </LinearLayout>
         </LinearLayout>
 
