--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,12 +59,15 @@
             android:text="Clientes"
             android:clickable="true"
             tools:ignore="RtlCompat"></TextView>
+
     </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#B5B5B5">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -73,8 +76,9 @@
                 android:layout_weight="1">
 
                     <ListView
-                        android:id="@+id/listViewVeiculos"
+                        android:id="@+id/listViewVeiculos" 
                         android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
                         android:layout_marginTop="16dp"/>
@@ -87,6 +91,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="1">
+
                 <ListView
                     android:id="@+id/listViewClientes"
                     android:layout_marginStart="10dp"
