--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             android:layout_width="138dp"
             android:layout_height="150dp"
             android:textColor="@color/white"
-            android:background="#009688"
+            android:background="@drawable/background_btn_veiculo"
             android:layout_weight="1"
             android:textSize="40dp"
             android:textAlignment="center"
@@ -52,7 +52,7 @@
             android:layout_height="150dp"
             android:textSize="40dp"
             android:textColor="@color/white"
-            android:background="#44A848"
+            android:background="@drawable/background_btn_cliente"
             android:layout_weight="1"
             android:textAlignment="center"
             android:layout_gravity="center_vertical"
