--- a/app/src/main/res/layout/cliente_activity.xml
+++ b/app/src/main/res/layout/cliente_activity.xml
@@ -5,6 +5,14 @@
     android:padding="16dp"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cadastro Cliente"
+        android:textAlignment="center"
+        android:layout_marginBottom="10dp"
+        android:textSize="20dp"/>
+
     <EditText
         android:id="@+id/nomeEditText"
         android:layout_width="match_parent"
@@ -21,11 +29,49 @@
         android:layout_marginTop="8dp"
         android:hint="CPF" />
 
+    <EditText
+        android:id="@+id/emailEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/cpfEditText"
+        android:textSize="30dp"
+        android:layout_marginTop="8dp"
+        android:hint="Email" />
+
+    <EditText
+        android:id="@+id/telefoneEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/emailEditText"
+        android:textSize="30dp"
+        android:layout_marginTop="8dp"
+        android:hint="Telefone" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
     <Button
         android:id="@+id/salvarButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/cpfEditText"
+        android:backgroundTint="@color/verde"
+        android:layout_below="@id/emailEditText"
+        android:layout_weight="1"
         android:layout_marginTop="16dp"
         android:text="Salvar" />
+
+        <Button
+            android:id="@+id/cancelarButton"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/verde"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/emailEditText"
+            android:layout_weight="1"
+            android:layout_marginTop="16dp"
+            android:text="Cancelar" />
+
+    </LinearLayout>
 </LinearLayout>
