--- a/app/src/main/res/layout/veiculo_activity.xml
+++ b/app/src/main/res/layout/veiculo_activity.xml
@@ -5,6 +5,15 @@
     android:padding="16dp"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cadastro Veiculo"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        android:layout_marginBottom="10dp"/>
+
+
     <EditText
         android:id="@+id/modeloEditText"
         android:layout_width="match_parent"
@@ -28,12 +37,61 @@
         android:textSize="30dp"
         android:layout_marginTop="8dp"
         android:hint="Renavam" />
+    <EditText
+        android:id="@+id/corEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/renavamEditText"
+        android:textSize="30dp"
+        android:layout_marginTop="8dp"
+        android:hint="Cor" />
+    <EditText
+        android:id="@+id/clienteEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/corEditText"
+        android:textSize="30dp"
+        android:layout_marginTop="8dp"
+        android:hint="Cliente" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <Button
         android:id="@+id/salvarButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/renavamEditText"
+        android:layout_weight="1"
+        android:backgroundTint="@color/ciano"
         android:layout_marginTop="16dp"
         android:text="Salvar" />
+
+        <Button
+            android:id="@+id/cancelarButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/renavamEditText"
+            android:layout_weight="1"
+            android:backgroundTint="@color/ciano"
+            android:layout_marginTop="16dp"
+            android:text="Cancelar" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnVincular"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Vincular Cliente"
+            android:layout_marginStart="125dp"
+            android:layout_marginTop="30dp"></Button>
+    </LinearLayout>
+
 </LinearLayout>
