--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,37 +27,41 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="433dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        android:background="#B5B5B5">
+        android:background="#B5B5B5"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/btnVeiculo"
             android:layout_width="138dp"
             android:layout_height="150dp"
-            android:textColor="@color/white"
-            android:background="@drawable/ic_launcher_background"
-            android:layout_weight="1"
-            android:textSize="40dp"
-            android:textAlignment="center"
             android:layout_gravity="center_vertical"
-            android:text="Veiculos"
+            android:layout_weight="1"
+            android:background="@drawable/background_btn_veiculo"
             android:clickable="true"
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"
+            android:text="Veiculos"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="40dp"
             tools:ignore="RtlCompat" />
 
         <TextView
             android:id="@+id/btnCliente"
             android:layout_width="155dp"
             android:layout_height="150dp"
-            android:textSize="40dp"
-            android:textColor="@color/white"
-            android:background="@drawable/ic_launcher_background"
-            android:layout_weight="1"
-            android:textAlignment="center"
             android:layout_gravity="center_vertical"
-            android:text="Clientes"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/background_btn_cliente"
             android:clickable="true"
+            android:text="Clientes"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="40dp"
             tools:ignore="RtlCompat"></TextView>
 
     </LinearLayout>
@@ -80,7 +84,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="10dp"
                         android:layout_width="match_parent"
-                        android:layout_height="200dp"
+                        android:layout_height="250dp"
                         android:layout_marginTop="16dp"/>
 
 
@@ -97,7 +101,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="250dp"
                     android:layout_marginTop="16dp"/>
 
 
